src/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:11.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          volumeMounts:
            - name: grafana-config-volume
              mountPath: /etc/grafana/provisioning/datasources
            - mountPath: /var/lib/grafana
              name: grafana-pv
      volumes:
        - name: grafana-config-volume
          configMap:
            defaultMode: 420
            name: grafana-config

        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
---
