src/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.nett.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  grafana
                port:
                  number: 3000
---
